<resources>
    <string name="app_name">Vezdecode</string>
    <string name="first_date">Дата выявления</string>
    <string name="last_date">Крайний срок</string>
    <string name="tv_status">Статус</string>
    <string name="search_title">Поиск</string>
    <string name="splash_fragment"></string>
    <string name="fragment_main"></string>
    <string name="incidents_title">Инциденты</string>
    <string name="title_info">Общая информация</string>

    <string name="title_registrator">Регистратор</string>
    <string name="title_crit_level">Уровень критичности</string>
    <string name="title_date_find">Дата выявления</string>
    <string name="title_date_final">Крайний срок</string>
    <string name="title_system">Система</string>
    <string name="title_status">Статус</string>
    <string name="title_dev">Отклонение</string>
    <string name="title_length">Протяжённость</string>
    <string name="system_category">система</string>
    <string name="date_category">Дата выявления</string>
    <string name="cancel_filters">Отменить фильтры</string>
    <string name="apply_filters">Применить фильтры</string>
    <string name="mrm_filter">МРМ</string>
    <string name="hand_input">Ручной ввод</string>
    <string name="date_start">Дата начала:</string>
    <string name="date_end">Дата окончания:</string>
    <string name="choose_date">Выберите дату</string>

</resources>