<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.vezdecode.data.remote.model.IncidentModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_padding"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="@dimen/default_padding"
        android:layout_marginBottom="6dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"

        app:cardCornerRadius="14dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp">

            <TextView
                android:id="@+id/tv_title"
                style="@style/TextView.Bold.RedTitle"
                android:text="@{item.extSysName}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Ручной ввод" />

            <TextView
                android:id="@+id/tv_description"

                style="@style/TextView.CAPS.Description"
                android:layout_width="match_parent"
                android:paddingBottom="0dp"
                android:text="@{item.description}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                tools:text="бал бла блаб лалотыаш оыщатыгарыщгта шыотащоы " />

            <TextView
                android:id="@+id/tv_ticket"
                style="@style/TextView.CAPS"
                android:paddingTop="0dp"
                android:text="@{item.ticketIdBrackets}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_description"
                tools:text="(324212321)" />

            <View
                android:id="@+id/first_divider"
                style="@style/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_ticket" />

            <TextView
                android:id="@+id/tv_first_date_title"
                style="@style/TextView.Bold.GrayTitle"
                android:text="@string/first_date"
                app:layout_constraintEnd_toStartOf="@+id/tv_first_date"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/first_divider"
                tools:text="Дата выявления" />

            <TextView
                android:id="@+id/tv_first_date"
                style="@style/TextView.Bold.BlackTitle"
                android:text="@{item.isKnowErrorDate()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_first_date_title"
                app:layout_constraintTop_toTopOf="@id/tv_first_date_title"
                tools:text="22.10.2020" />

            <View
                android:id="@+id/second_divider"
                style="@style/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_first_date_title" />

            <TextView
                android:id="@+id/tv_last_date_title"
                style="@style/TextView.Bold.GrayTitle"
                android:text="@string/last_date"
                app:layout_constraintEnd_toStartOf="@id/tv_last_date"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/second_divider" />

            <TextView
                android:id="@+id/tv_last_date"
                style="@style/TextView.Bold.BlackTitle"
                android:text="@{item.targetFinish}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_last_date_title"
                app:layout_constraintTop_toTopOf="@id/tv_last_date_title"
                tools:text="20.20.200" />

            <View
                android:id="@+id/third_divider"
                style="@style/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_last_date_title" />

            <TextView
                android:id="@+id/tv_status_title"
                style="@style/TextView.Bold.GrayTitle"
                android:text="@string/tv_status"
                app:layout_constraintEnd_toStartOf="@id/tv_status"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/third_divider" />

            <TextView
                android:id="@+id/tv_status"
                style="@style/TextView.Bold.BlackTitle"
                android:text="@{item.status}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_status_title"
                app:layout_constraintTop_toTopOf="@id/tv_status_title"
                tools:text="НОВЫе" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>